2003/11/02 16:55 muppetman

	* ParseXSDoc.pm: match void\s* instead of just void when looking for
	methods with void return.  use scalar(localtime) instead of the
	identical strftime format.

2003/11/02 16:17 muppetman

	* Glib.pm: undo my silly "atleast" version-check import stuff, and 
	do something compatible with the version check supplied by Exporter.
	we don't use Exporter because, well, we don't export anything.

2003/11/02 02:15 muppetman

	* ParseXSDoc.pm: split_aliases wasn't properly deep-copying args
	arrays.  since that's not exactly something that you'd want to do
	unless you are going to generate docs from the parser results,
	moved the splitting of aliases from parse_file() to xsdocparse()
	as canonicalize_xsubs().

2003/11/01 01:15 muppetman

	* typemap: input (Perl-to-C) typemap for T_GPERL_GENERIC_WRAPPER
	now uses a more robust regex -- strip leading const\s+ and ensure
	that we strip the trailing \s*\* from the very end.  requested
	by kaffee.  the output typemap is unchanged.

2003/10/30 13:47 rwmcfa1

	* Glib.pm: added tie_properties stuff

	* t/b.t: initial import, test tie_properties stuff

2003/10/30 11:29 muppetman

	* GenPod.pm: make sure that all signatures get the same pod directive.
	don't add sigils to return type names.

2003/10/30 09:30 rwmcfa1
	
	* Glib/MakeHelper.pm: improved/safer rules for building the documentation

	* Glib/Makefile.PL: we have some 'special' dependancies for Glib that we need to make sure happen before xsdoc2pod can proceed

2003/10/29 02:00 muppetman

	* Glib.pm: add a version check to Glib's import.

	* GenPod.pm, MakeHelper.pm: rework package to filename handling to
	support packages with :: in the name.  use FULLEXT (makefile var that
	is the full extension path under INST_LIB) and File::Spec."

	* ParseXSDoc.pm: don't clobber package with object; store object
	separately and use it when retrieving pkgdata, but not in place of
	the package name.  this allows xsubs to be placed into a different